@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Allow users to set the maximum number of vector features to be drawn (#3739)
+
 - Fixed FCGI on Windows problem related to lexer (#3812)
 
 - KML: Add ows/kml_exclude_items (#3560)
